Updates to parallel testing